# compute-budget

./: Cargo.toml  Makefile  README.md  codama.json  codama.mjs  package.json  pnpm-lock.yaml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  publish-js-client.yml  publish-js.yml  publish-rust.yml
clients/js/: README.md  package.json  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts
clients/js/src/: constants.ts  estimateAndSetComputeLimit.ts  estimateComputeLimit.ts  estimateComputeLimitInternal.ts  index.ts  internal.ts  internalMoveToKit.ts  introspect.ts  setComputeLimit.ts  setComputePrice.ts
clients/js/test/: _setup.ts  estimateAndSetComputeLimit.test.ts  estimateComputeLimitInternal.test.ts  increment.test.ts  setComputeUnitLimit.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json
program/src/: lib.rs
scripts/: generate-clients.mjs  solana.dic  spellcheck.toml  start-validator.mjs  upgrade-template.mjs
scripts/client/: test-js.mjs
